tests/good/vars/declare_multiple.go
package main

import "fmt"

func main() {
	var x, y int

	fmt.Print(x, y, "\n")
}

/*
== Expected program output ==
0 0
*/
