tests/bad/vars/unused.go
package main

func main() {
	var a int
}

/*
== Expected compiler output ==
File "./tests/bad/vars/unused.go", line 4, characters 5-6:
error: a declared but not used
*/
